changed home page

--- a/projects/formpy/index.mdx
+++ b/projects/formpy/index.mdx
@@ -1,5 +1,6 @@
 ---
 name: "Formpy"
+description: Website to create and scan forms using OMR (optical mark recognition)
 priority: 0
 hero_image: "./OMR_VIS.png"
 hero_image_alt: "visualisation of spot detection on form"
@@ -12,8 +13,7 @@ Bringing optical mark recognition (OMR) to the web to analyse paper based forms.
 ---
 
 [Code](https://github.com/ismailmo1/formpy-app) \
-[Live Website](https://formpy.ismailmo.com) \
-[Blog](https://blog.ismailmo.com/formpy) \
+[Live Website](https://formpy.ismailmo.com)
 
 Remember those multiple choice exams you did at school that were marked automatically by a "computer"?
 Formpy emulates this workflow, letting you design your own forms and then automating the analysis.
