--- a/projects/mes-scrape/index.mdx
+++ b/projects/mes-scrape/index.mdx
@@ -1,5 +1,7 @@
 ---
-name: "MES-Scrape"
+name: "MES-Scraper"
+description: Extracting manufacturing data from MES systems for root cause analysis
+
 priority: 1
 hero_image: "isa-95.png"
 hero_image_alt: "the role of MES in a manufacturing plant as shown in the ISA-95 model"
@@ -11,13 +13,11 @@ A python module to scrape information from the frontend of a Manufacturing Execu
 
 ---
 
-[Code](https://github.com/ismailmo1/domino_mes_ismail) \
-[notebooks](https://github.com/ismailmo1/domino_mes_ismail) \
-[Blog](https://blog.ismailmo.com/mes-scrape) \
+[Code](https://github.com/ismailmo1/domino_mes_ismail)
 
 [MES](https://en.wikipedia.org/wiki/Manufacturing_execution_system) is a genre of industrial software systems that tracks and documents the manufacturing process: from raw materials to finished goods.
 During my time working in process engineering, a lot of my workflow involved wrestling with these systems to input and extract operational and quality data.
 
-Hvaing some programming knowledge meant that clicking around the same menus looking for information was more painful than it should be, so I quickly got to work to start automating common tasks.
+Having some programming knowledge meant that clicking around the same menus looking for information was more painful than it should be, so I quickly got to work to start automating common tasks.
 
 This evolved from quick and dirty jupyter notebooks to not so quick (but still dirty) notebooks and then eventually writing a module so I could reuse common functions and drastically reduce time it took to write scripts to collect data.
