--- a/projects/tkinter-pandas/index.mdx
+++ b/projects/tkinter-pandas/index.mdx
@@ -1,5 +1,6 @@
 ---
-name: tkinter-pandas
+name: Automated Invoice Cleansing
+description: Python app (Tkinter) for cleaning invoice data
 priority: 3
 hero_image: "tkinter.jpeg"
 hero_image_alt: "the loading screen to provide feedback to users during long running data scraping/analysis functions"
@@ -11,12 +12,10 @@ Tkinter GUI wrapper for pandas scripts
 
 ---
 
-[Code](https://github.com/ismailmo1/cert_folder_search) \
-[Demo](#) \
-[Blog](#) \
+[Code](https://github.com/ismailmo1/financial-invoice)
 
 Pandas is a fantastic library for working with data and it is one of the first python libraries I spent a lot of time with as I slowly started to replace Excel.
-Despite all of it's fantastic features and advantages over Excel, sending my analyses to colleagues who didn't use python proved to be a challenge.
+Despite all of it's awesome features and advantages over Excel, replicating my workflow for colleagues who didn't use python proved to be a challenge.
 
-Spinning up a web server and deploying it via an API or a simple web app using something like Flask was beyond my capabilities at the time (and I doubt IT would've let me deploy on their servers anyways!)
-but I did discover Tkinter and packaged up my scripts into fun little desktop apps.
+Spinning up a web server and deploying it via an API or a web app using something like Flask was beyond my capabilities at the time (and deployment on internal servers wasn't an option 🙁)
+but Tkinter made it fun and easy to wrap my scripts into desktop apps and distribute.
