--- a/projects/yelp-camp/index.mdx
+++ b/projects/yelp-camp/index.mdx
@@ -1,5 +1,6 @@
 ---
-name: "Yelpcamp"
+name: "YelpCamp"
+description: Website to create, review and browse campgrounds
 priority: 10
 hero_image: "./yelpcamp-screenshot.png"
 hero_image_alt: "yelpcamp site screenshot"
@@ -12,9 +13,8 @@ Create, review and browse campgrounds in this web app (a yelp clone but for camp
 ---
 
 [Code](https://github.com/ismailmo1/yelpCamp) \
-[Live Website](https://yelpcamp.ismailmo.com) \
-[Blog](https://blog.ismailmo.com/yelpcamp) \
+[Live Website](http://yelpcamp.ismailmo.com)
 
-Yelp Camp was the first website I made as part of a bootcamp. It implements CRUD functionality with MongoDB, and other standardfeatures you would see in a web app using the express framework.
+Yelp Camp was the first website I made as part of a bootcamp. It implements CRUD functionality with MongoDB, a cool looking integration with mapbox, and other standard features you would see in a web app.
 
-I highly recommend checking out his [udemy course](https://www.udemy.com/course/the-web-developer-bootcamp/) here, it covers the Express framework for nodeJS however it is a great introduction to web development principles in general.
+I highly recommend checking out Colt Steele's [udemy course](https://www.udemy.com/course/the-web-developer-bootcamp/) here, it covers the Express framework for nodeJS however it is a great introduction to web development principles in general.
